Added multimedia content.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 
     <!--Main-->
     <main>
-        <img>
+        <video autoplay>
+            <source src="resources/video/excursion.mp4" type="video/mp4">
+        </video>
         <h2 class="heading">Your personal travel guide</h2>
         <p class="description">Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <img>
-        <img>
+        <img src="resources/images/camp.webp">
+        <br>
+        <br>
+        <img src="resources/images/phone.webp">
         <h2 class="heading">Coming Soon for iPhone and Android</h2>
         <a href="https://049b714f93454f739b8767316dc30d0b.cc-propeller.cloud/#"><p class="download-link">Download Excursion (Coming Soon!)</p></a>
     </main>
